--- a/stylesheet.css
+++ b/stylesheet.css
@@ -369,3 +369,56 @@ form button[type="submit"]:hover {
     margin: 10px 0;
 }
 
+/*----------services--------*/
+#services{
+    padding: 30px 0;
+    color: #161616;
+    margin: 30px;
+    margin-top: 0px;
+    margin-inline-start: 30px;
+    background-color: #f2f2f2;
+}
+.serves-list{
+    display: grid;
+    color: #080808;
+}
+.sub-title{
+    color: #131212;
+    position: relative;
+    text-align: center;
+
+}
+.card {
+    box-shadow: 0 4px 8px 0 #ffffff;
+    transition: 0.3s;
+    margin: 10px;
+    background-color: #0f0f0f;
+    float: left;
+    size-adjust: 100%;
+    margin-left: 80px;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgb(121, 121, 170);
+  }
+  
+  .box {
+    padding: 2px 16px;
+    color: black;
+    float: right;
+    margin-right: 80px;
+    margin-left: 50%;
+  }
+  .flip-card-inner {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 100%;
+    height: 80%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    align-items: center;
+    border-radius: 0%;
+    }
